# fluxerpy

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  USAGE.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
examples/: advanced_usage.py  basic_usage.py  event_handling.py  user_interactions.py
fluxerpy/: __init__.py  client.py  http.py  models.py
fluxerpy3/: __init__.py  client.py  errors.py  gateway.py  http.py  models.py
tests/: __init__.py  test_basic.py
